--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <header class="container-fluid">
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand">Свадебное приглашение sfjhsdjklf</a>
+        <a class="navbar-brand">Свадебное приглашение</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -46,6 +46,8 @@
     <img src="image/цветы7.png" class="q1">
     <img src="image/цветы7-1.png"class="q2">
     <img src="image/цветы7-2.png"class="q3">
+    <img src="image/волны.png" class="phon_2">
+    <img src="image/здание.png" class="phon_3">
     <div>
         <p class="zagolovok">До начала торжества:</p>
 
@@ -71,10 +73,39 @@
 
     <div>
         <p class="zagolovok" id="locations">Локации</p>
+        <div class="location">
+            <div>
+                <p class="text">Grand Hall, банкетный зал<br>
+                    Гожувская ул., 41В, Саранск</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2333.8328046778497!2d45.22519797660626!3d54.200744410453765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4144091a8b0a559d%3A0x382c33c73ebd1944!2z0JPQvtC20YPQstGB0LrQsNGPINGD0LsuLCA0MdCyLCDQodCw0YDQsNC90YHQuiwg0KDQtdGB0L8uINCc0L7RgNC00L7QstC40Y8sIDQzMDAzMQ!5e0!3m2!1sru!2sru!4v1741023652807!5m2!1sru!2sru" 
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="maps"></iframe>" 
+            </div>
+            <img src="image/роза.png" class="roza" style="transform: scaleX(-1);">
+                
+        </div>
+        <div class="location">
+            <img src="image/роза.png" class="roza">
+            <div>
+                <p class="text">Дворец бракосочетания<br>
+                    Советская ул., 47А, Саранск</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2334.93842641934!2d45.1804238766051!3d54.181166311934064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414408933a1a3129%3A0xb0dba92cc047f065!2z0JTQstC-0YDQtdGGINCx0YDQsNC60L7RgdC-0YfQtdGC0LDQvdC40Y8!5e0!3m2!1sru!2sru!4v1742477894648!5m2!1sru!2sru" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="maps"></iframe>
+            </div>
+        </div>
+    </div>
 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2333.8328046778497!2d45.22519797660626!3d54.200744410453765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4144091a8b0a559d%3A0x382c33c73ebd1944!2z0JPQvtC20YPQstGB0LrQsNGPINGD0LsuLCA0MdCyLCDQodCw0YDQsNC90YHQuiwg0KDQtdGB0L8uINCc0L7RgNC00L7QstC40Y8sIDQzMDAzMQ!5e0!3m2!1sru!2sru!4v1741023652807!5m2!1sru!2sru" 
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" 
-        
+    <div>
+        <img src="image/цветы8.png" class="flower">
+    </div>
+    <div style="margin-top: 400px;">
+        <img src="image/цветы1.png" class="flowers">
+        <p class="zagolovok" id="program">Программа</p>
+        <div class="name-container">
+            <img src="image/program.png" class="priglash">
+        </div>
+    </div>
+    <div class="form">
+        <p class="zagolovok" id="survey" style="color:#131313;">Анкета гостя</p>
+        <p class="text" style="color:#131313;">Просим подтвердить свое<br>присутствие по форме ниже</p>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
