--- a/index.html
+++ b/index.html
@@ -98,11 +98,13 @@
     </div>
     <div style="margin-top: 400px;">
         <img src="image/цветы1.png" class="flowers">
+        <img src="image/цветы3.png" class="flowers">
         <p class="zagolovok" id="program">Программа</p>
         <div class="name-container">
             <img src="image/program.png" class="priglash">
         </div>
     </div>
+
     <div class="form">
         <p class="zagolovok" id="survey" style="color:#131313;">Анкета гостя</p>
         <p class="text" style="color:#131313;">Просим подтвердить свое<br>присутствие по форме ниже</p>
