--- a/index.html
+++ b/index.html
@@ -95,18 +95,22 @@
     <div>
         <img src="image/цветы8.png" class="flower">
     </div>
-    <div style="margin-top: 400px;">
+    <div class="program">
         <img src="image/цветы1.png" class="flowers">
-        <img src="image/цветы3.png" class="flowers">
+        <img src="image/цветы3.png" class="flowerss">
         <p class="zagolovok" id="program">Программа</p>
         <div class="name-container">
             <img src="image/program.png" class="priglash">
         </div>
     </div>
-
+    <img src="image/цветы2.png" class="flowersss">
     <div class="form">
-        <p class="zagolovok" id="survey" style="color:#131313;">Анкета гостя</p>
+        <p class="zagolovok" id="survey" style="color:#131313; margin-top: 0;">Анкета гостя</p>
         <p class="text" style="color:#131313;">Просим подтвердить свое<br>присутствие по форме ниже</p>
+        <button class="button" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLSfWJdDrl3abzUdhBMp7dBi8Oniv3erlMGwVvTtROltbN1GT1g/viewform?usp=header'">
+            Заполнить форму
+        </button>
+        <img src="image/цветы5.png" class="flowerssss">
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -148,5 +152,13 @@
         }, 1000);
     </script>
 </body>
+<footer>
+    <p class="text left">С нетерпением ждем<br>
+        встречи с вами!</p>
+    <p class="text right">Если у Вас остались<br>вопросы, мы с радостью<br>на них ответим.</p>
+</footer>
+<div>
+    <p style="height: 40px;"></p>
+</div>
 
 </html>
