--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     <div>
         <img src="image/цветы8.png" class="flower">
     </div>
+    
     <div class="program">
         <img src="image/цветы1.png" class="flowers">
         <img src="image/цветы3.png" class="flowerss">
@@ -153,8 +154,7 @@
     </script>
 </body>
 <footer>
-    <p class="text left">С нетерпением ждем<br>
-        встречи с вами!</p>
+    <p class="text left">С нетерпением ждем<br>встречи с вами!</p>
     <p class="text right">Если у Вас остались<br>вопросы, мы с радостью<br>на них ответим.</p>
 </footer>
 <div>
