--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <img src="image/цветы2.png" class="flowersss">
     <div class="form">
         <p class="zagolovok" id="survey" style="color:#131313; margin-top: 0;">Анкета гостя</p>
-        <p class="text" style="color:#131313;">Просим подтвердить свое<br>присутствие по форме ниже</p>
+        <p class="text" style="color:#131313; text-align: center;">Просим подтвердить свое<br>присутствие по форме ниже</p>
         <button class="button" onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLSfWJdDrl3abzUdhBMp7dBi8Oniv3erlMGwVvTtROltbN1GT1g/viewform?usp=header'">
             Заполнить форму
         </button>
