--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
     </div>
 
-    <div>
+    <div style="margin: 20px;">
         <p class="zagolovok" id="locations">Локации</p>
         <div class="location">
             <div>
