--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
             <img src="image/program.png" class="priglash">
         </div>
     </div>
-    <div class="flowersss fade-in">
-        <img src="image/цветы2.png">
+    <div>
+        <img src="image/цветы2.png" class="flowersss fade-in">
     </div>
     
     <div class="form fade-in">
