--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 </header>
 
 <body>
-    <div class="name-container fade-in">
-        <img src="image/инициалы.png" class="inizial">
-        <p class="imena">Матвей & Анастасия</p>
+    <div class="name-container">
+        <img src="image/инициалы.png" class="inizial fade-in">
+        <p class="imena fade-in">Матвей & Анастасия</p>
     </div>
     <div class="container_prigl fade-in">
         <img src="image/приглашение.png" class="priglash">
