--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
 <body>
     <div class="name-container">
-        <img src="image/инициалы.png" class="inizial fade-in">
-        <p class="imena fade-in">Матвей & Анастасия</p>
+        <img src="image/инициалы.png" class="inizial">
+        <p class="imena">Матвей & Анастасия</p>
     </div>
     <div class="container_prigl fade-in">
         <img src="image/приглашение.png" class="priglash">
