--- a/index.html
+++ b/index.html
@@ -92,18 +92,15 @@
         </div>
     </div>
 
-    <img src="image/цветы8.png" class="flower">
-    <img src="image/цветы1.png" class="flowers">
-    <img src="image/цветы3.png" class="flowerss">
-
     <div class="program fade-in">
+        <img src="image/цветы8.png" class="flower">
+        <img src="image/цветы1.png" class="flowers">
+        <img src="image/цветы2.png" class="flowersss">
+        <img src="image/цветы3.png" class="flowerss">
         <p class="zagolovok" id="program">Программа</p>
         <div class="name-container">
             <img src="image/program.png" class="priglash">
         </div>
-    </div>
-    <div>
-        <img src="image/цветы2.png" class="flowersss fade-in">
     </div>
     
     <div class="form fade-in">
