--- a/index.html
+++ b/index.html
@@ -34,19 +34,23 @@
 </header>
 
 <body>
+
     <div class="name-container">
         <img src="image/инициалы.png" class="inizial">
         <p class="imena">Матвей & Анастасия</p>
     </div>
+
     <div class="container_prigl fade-in">
         <img src="image/приглашение.png" class="priglash">
+        <img src="image/цветы7.png" class="q1">
+        <img src="image/цветы7-1.png"class="q2">
+        <img src="image/цветы7-2.png"class="q3">
     </div>
+
     <img src="image/волны_1.png" class="phon">
-    <img src="image/цветы7.png" class="q1">
-    <img src="image/цветы7-1.png"class="q2">
-    <img src="image/цветы7-2.png"class="q3">
     <img src="image/волны.png" class="phon_2">
     <img src="image/здание.png" class="phon_3">
+
     <div>
         <p class="zagolovok fade-in">До начала торжества:</p>
 
@@ -72,15 +76,14 @@
 
     <div style="margin: 40px;">
         <p class="zagolovok fade-in" id="locations">Локации</p>
-        <div class="location">
+        <div class="location fade-in">
             <div>
                 <p class="text fade-in">Grand Hall, банкетный зал<br>
                     Гожувская ул., 41В, Саранск</p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2333.8328046778497!2d45.22519797660626!3d54.200744410453765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4144091a8b0a559d%3A0x382c33c73ebd1944!2z0JPQvtC20YPQstGB0LrQsNGPINGD0LsuLCA0MdCyLCDQodCw0YDQsNC90YHQuiwg0KDQtdGB0L8uINCc0L7RgNC00L7QstC40Y8sIDQzMDAzMQ!5e0!3m2!1sru!2sru!4v1741023652807!5m2!1sru!2sru" 
                 allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="maps fade-in"></iframe>" 
             </div>
-            <img src="image/роза.png" class="roza fade-in" style="transform: scaleX(-1);">
-                
+            <img src="image/роза.png" class="roza fade-in" style="transform: scaleX(-1);">       
         </div>
         <div class="location fade-in">
             <img src="image/роза.png" class="roza fade-in">
@@ -125,7 +128,6 @@
                 }
             });
         }
-    
         // Проверяем видимость при загрузке страницы и прокрутке
         window.addEventListener('load', checkVisibility);
         window.addEventListener('scroll', checkVisibility);
