--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
     </div>
 
     <div class="container_prigl fade-in">
-        <img src="image/приглашение.png" class="priglash">
+        <div class="name-container">
+            <img src="image/приглашение.png" class="priglash">
+        </div>
         <img src="image/цветы7.png" class="q1">
         <img src="image/цветы7-1.png"class="q2">
         <img src="image/цветы7-2.png"class="q3">
